testsuite/tests/module/mod98.stderr

mod98.hs:3:1: error:
    Invalid type signature: M.x :: ...
    Should be of form <variable> :: <type>
